Fixed bar. Alignment adjsuted

--- a/src/static/root/lp.css
+++ b/src/static/root/lp.css
@@ -60,7 +60,7 @@
     position:sticky;
     top:0;
     z-index: 1;
-    max-width: 350px;
+    max-width: 303px;
     box-shadow: var(--effect-outstandig-box-shadow);
   }
   @media (max-width: 992px) {
